2001-10-30  Gerd Moellmann  <gerd@gnu.org>

	* xterm.c (x_after_update_window_line): Don't run the code
	clearing in borders for rows whose visible height is 0.

	* xdisp.c (clear_garbaged_frames): Redraw the frame only if its
	resized_p flag is set.  If not set, use the much less flickering
	method previously used.

	* dispnew.c (change_frame_size_1): Set frame's resized_p.

	* frame.h (struct frame) <resized_p>: New member.

	* lread.c (to_multibyte): Ensure read_buffer is at least twice
	as large as the number of bytes to convert.
	
	* lread.c (to_multibyte): New function.
	(read1): Use it.

	* xterm.c (x_draw_relief_rect): Correct bottom relief by 1 pixel.
	(x_set_glyph_string_background_width): Set
	extends_to_end_of_line_p if the row's fill_line_p is set and
	drawing the last glyph with DRAW_IMAGE_{RAISED,SUNKEN}.

	* xdisp.c (clear_garbaged_frames): Call Fredraw_frame.

2001-10-29  Eli Zaretskii  <eliz@is.elta.co.il>

	* coding.c (syms_of_coding): Document that locale-coding-system is
	used for decoding input on X.

	* window.c (Fscroll_left, Fscroll_right): Doc fix.

2001-10-29  Gerd Moellmann  <gerd@gnu.org>

	* xterm.c (x_display_and_set_cursor): If cursor_in_echo_area,
	use NO_CURSOR if cursor_in_non_selected_windows is false.

	* xfaces.c (Fface_font): Use UNSPECIFIEDP instead of NILP for
	the slant attribute if FRAME is t.
	
2001-10-29  Eli Zaretskii  <eliz@is.elta.co.il>

	* emacs.c (Finvocation_directory): Doc fix.
	(USAGE2): Fix typos; from Pavel Janik <Pavel@Janik.cz>.

2001-10-29  Gerd Moellmann  <gerd@gnu.org>

	* xfns.c (x_set_internal_border_width): Set frame garbaged
	when X window doesn't exist yet.

	* xterm.c (x_after_update_window_line): Clear internal border
	in different circumstances.
	
	* xterm.c (XTread_socket) <KeyPress>: Don't use
	STRING_CHAR_AND_LENGTH if nchars == nbytes.  From Kenichi Handa
	<handa@etl.go.jp>.

2001-10-28  Gerd Moellmann  <gerd@gnu.org>

	* xfns.c (x_build_heuristic_mask): Use x_alloc_image_color.
	