@@ -1,3 +1,8 @@
+2001-10-30  Jason Rumney  <jasonr@gnu.org>
+
+	* w32fns.c (w32_to_x_charset): Increase size of XLFD charset buffer.
+	(enum_font_cb2): Ignore fonts with vertical orientation.
+
 2001-10-30  Gerd Moellmann  <gerd@gnu.org>
 
 	* xterm.c (x_after_update_window_line): Don't run the code
